--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,4 +2,6 @@
 @import "site/header.css";
 @import "site/section.css";
 @import "site/footer.css";
+@import "list.css";
+@import "tag.css";
 @import "work.css";
