refactor: app styles

--- a/styles/base.css
+++ b/styles/base.css
@@ -72,6 +72,10 @@ b {
   @apply font-serif text-lg leading-relaxed;
 }
 
+.content.content--base {
+  @apply text-base;
+}
+
 .content p:not(:last-child) {
   @apply mb-3;
 }
