--- a/styles/base.css
+++ b/styles/base.css
@@ -3,18 +3,18 @@
 @tailwind utilities;
 
 :root {
-  --background: 248, 249, 250;
-  --color-100: 173, 181, 189;
-  --color-200: 108, 117, 125;
-  --color-300: 73, 80, 87;
+  --base: 248 249 250;
+  --brand-100: 173 181 189;
+  --brand-200: 108 117 125;
+  --brand-300: 73 80 87;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: 33, 37, 41;
-    --color-100: 108, 117, 125;
-    --color-200: 173, 181, 189;
-    --color-300: 233, 236, 239;
+    --base: 33 37 41;
+    --brand-100: 108 117 125;
+    --brand-200: 173 181 189;
+    --brand-300: 233 236 239;
   }
 }
 
@@ -46,7 +46,7 @@ html {
 
 body {
   @apply min-h-screen py-16;
-  background-color: rgb(var(--background));
+  background-color: rgb(var(--base));
 }
 
 h1,
@@ -61,7 +61,7 @@ h6 {
 b,
 strong {
   font-weight: normal;
-  color: rgb(var(--color-300));
+  color: rgb(var(--brand-300));
 }
 
 .header,
@@ -89,37 +89,37 @@ strong {
 
 .content code {
   @apply text-xs px-1 py-0.5 rounded font-bold;
-  background-color: rgba(var(--color-100), 0.1);
-  color: rgb(var(--color-300));
+  background-color: rgba(var(--brand-100), 0.1);
+  color: rgb(var(--brand-300));
 }
 
 @media (prefers-color-scheme: dark) {
   .content code {
-    background-color: rgba(var(--color-300), 0.1);
-    color: rgb(var(--color-300));
+    background-color: rgba(var(--brand-300), 0.1);
+    color: rgb(var(--brand-300));
   }
 }
 
 .link,
 .content a {
   @apply border-b border-dotted;
-  border-color: rgba(var(--color-100), 0.75);
+  border-color: rgba(var(--brand-100), 0.75);
 }
 
 .link:hover,
 .content a:hover {
-  color: rgb(var(--color-300));
-  border-color: rgba(var(--color-100), 1);
+  color: rgb(var(--brand-300));
+  border-color: rgba(var(--brand-100), 1);
 }
 
 .color-300 {
-  color: rgb(var(--color-300));
+  color: rgb(var(--brand-300));
 }
 
 .color-200 {
-  color: rgb(var(--color-200));
+  color: rgb(var(--brand-200));
 }
 
 .color-100 {
-  color: rgb(var(--color-100));
+  color: rgb(var(--brand-100));
 }
